@@ -1,2 +1,2 @@
-VERSION=7.12.1
+VERSION=7.12.2
 YEARS=1992-2009
